# peripheral

./: .eslintrc.js  .gitignore  .gitmodules  .golangci.yml  .yamllint  AGENTS.md  CLAUDE.md  DATABASE_CONNECTION_FIX.md  DATAFRAME_STRATEGY_IMPLEMENTATION.md  DOCKER_BUILD_FIX.md  ENVIRONMENT_SETUP.md  OPTIMIZATION_STAGE_TABLES.md  README.md  README_STRATEGY_INFRASTRUCTURE.md  REPOSITORY_README.md  STAGE1_IMPLEMENTATION_SUMMARY.md  STAGE3_IMPLEMENTATION_SUMMARY.md  STRATEGY_EXECUTION_MODES.md  STRATEGY_SYSTEM_README.md  STRATEGY_WORKER_ARCHITECTURE.md  TIMEZONE_FIX_SUMMARY.md  TRADING_STRATEGY_SYSTEM.md  \  apply-cloudflare-config.sh  apply-mime-fixes.sh  apply_migration.sh  bastion-host.md  check_script.sh  cloudflared.yaml  conn.py  db-secret.yaml  debug_strategy.py  dev.bash  docker-compose-ben.yaml  docker-compose-linux.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-deprecated_compose.prod.yaml  errors.txt  (+34 more)
.github/: README.md  ci.Dockerfile
backend/: .golangci.yml  Dockerfile  Dockerfile.dev  Dockerfile.prod  LINTING.md  api.go  auth.go  go.mod  go.sum  main.go
cache/: Dockerfile.prod  init.sh  redis.conf
config/: docker-deprecated_compose.prod.yaml
context/: format.bash  scripts.txt
db/: Dockerfile  Dockerfile.dev  Dockerfile.prod  backup.sh  dev.conf  init.sql  init2.sql  rollouts.sql  run_migrations.sh  securities.csv  start.sh
docs/: AGENT_GUIDE.md  LINTING.md  PRIORITY_QUEUE_SYSTEM.md  README.md  SYSTEM_CAPABILITIES.md  WORKER_SCALING.md  backup-recovery-system.md  cluster-monitoring.md  container-ssh-example.md  friday-gap-analysis-test.md  gemini_key_rotation.md
services/worker/: .bandit  .dockerignore  .flake8  .pylintrc  ACCESSOR_STRATEGY_README.md  DATAFRAME_STRATEGY_README.md  DOCKER_FIX.md  Dockerfile  Dockerfile.dev  Dockerfile.minimal  Dockerfile.prod  ERROR_HANDLING_CHANGES.md  FILTER_VALUES_UPDATE.md  QUEUE_SYSTEM.md  README.md  TESTING_GUIDE.md  UNIFIED_STRATEGY_GUIDE.md  VALIDATION_IMPROVEMENTS.md  active.py  bandit-report-fixed.json  cleanup_redis.py  conn.py  data.py  demo_strategy.py  gemini.py  health_check.py  hot_reload.py  lint_and_security.sh  pyproject.toml  requirements.txt  requirements_minimal.txt  requirements_no_talib.txt  screen.py  sector.py  temp.py  test_automated.py  test_db_recovery.py  test_duplicate_names.py  test_execution.py  test_priority_queue.py  (+18 more)
services/worker/logs/: .gitkeep
services/worker/models/1/1/variables/: variables.data-00000-of-00001
services/worker/models/1/2/: saved_model.pb
services/worker/src/: accessor_strategy_engine.py  agent.py  agent_test.py  alert.py  backtest.py  data.py  data_accessors.py  data_provider.py  dataframe_strategy_engine.py  dataframe_strategy_examples.py  engine.py  enhanced_data_layer.py  examples.py  examples_filtered.py  execution_engine.py  friday_gap_strategy.py  generator.py  plotlyToMatlab.py  pythonAgentGenerator.py  python_sandbox.py  sandbox.py  screen.py  security_validator.py  strategy_data_analyzer.py  strategy_engine.py  strategy_examples.py  strategy_generator.py  strategy_worker.py  test.py  test_data_accessors.py  unified_strategy_engine.py  validator.py  worker_server.py
services/worker/src/utils/: __init__.py  conn.py  context.py  data.py  data_accessors.py  error_utils.py  errors.py  parser.py  plotlyToMatlab.py  plotly_to_matlab.py  strategy_crud.py  ticker_extractor.py
services/worker/test/: meta.py  train2.py  vae.py  vae2.py  vae3.py
services/worker/tests/: demo_strategy.py  examples_filtered.py  test_accessor_strategy.py  test_ast_with_sample_data.py  test_automated.py  test_complex_strategies.py  test_complex_strategies_fixed.py  test_comprehensive_multiframe.py  test_dataframe_strategy.py  test_execution.py  test_friday_afternoon_gaps.py  test_friday_strategy_execution.py  test_get_bar_data_filters.py  test_integration_endpoints.py  test_multi_timeframe.py  test_new_polygon_fields.py  test_redis_commands.py  test_security_fixes.py  test_server_integration.py  test_simple.py  test_standalone_ast.py  test_strategy_generation.py  test_typing_simple.py  test_unified_strategy.py  test_worker.py
(+1193 files in other folders)
